--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,16 @@ bs4==0.0.1
 certifi==2023.7.22
 charset-normalizer==3.2.0
 click==8.1.6
+fanstatic==1.3
 Flask==2.3.2
+Flask-Cors==4.0.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
+js==1.0
 MarkupSafe==2.1.3
 requests==2.31.0
 soupsieve==2.4.1
 urllib3==2.0.4
+WebOb==1.8.7
 Werkzeug==2.3.6
