--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,7 @@ certifi==2023.7.22
 charset-normalizer==3.2.0
 click==8.1.6
 fanstatic==1.3
-Flask==2.3.2
-Flask-Cors==4.0.0
+Flask
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
