--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,10 @@ blinker==1.6.2
 bs4==0.0.1
 certifi==2023.7.22
 charset-normalizer==3.2.0
-Flask
+click==8.1.6
+fanstatic==1.3
+Flask==2.3.2
+Flask-Cors==4.0.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
